@@ -51,6 +51,7 @@ namespace Ipopt
   DECLARE_STD_EXCEPTION(INTERNAL_ABORT);
   DECLARE_STD_EXCEPTION(NO_FREE_VARIABLES_BUT_FEASIBLE);
   DECLARE_STD_EXCEPTION(NO_FREE_VARIABLES_AND_INFEASIBLE);
+  DECLARE_STD_EXCEPTION(INCONSISTENT_BOUNDS);
   /** Exception FAILED_INITIALIZATION for problem during
    *  initialization of a strategy object (or other problems).  This
    *  is thrown by a strategy object, if a problem arises during
