@@ -2,6 +2,12 @@ This file contain the log of changes for the main development branch (trunk).
 More detailed information about incremental changes can be found in the
 history management of subversion.
 
+2015-02-xx releases/3.12.1
+        - fixes to build system for dependency linking and library versioning
+        - Ipopt will now report an NLP with inconsistent variable bounds
+          or inconsistent constraints sides as infeasible instead of
+          throwing an invalid TNLP exception (by T. Kelman) [r2548]
+
 2015-01-23 releases/3.12.0
         - Library dependencies are now recorded in shared library builds,
           which is intended to simplify linking against the Ipopt library.
